--- a/Backend/04_mega-project/package.json
+++ b/Backend/04_mega-project/package.json
@@ -1,8 +1,8 @@
 {
   "name": "04_mega-project",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js"
   },
@@ -13,5 +13,10 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.14.1"
   }
 }
