--- a/Backend/04_mega-project/.env.sample
+++ b/Backend/04_mega-project/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://<db_username>:<db_password>@cluster0.lmidkqn.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=1d
+REFERESH_TOKEN_SECRET=
+REFERESH_TOKEN_EXPIRY=10d
